--- a/package.json
+++ b/package.json
@@ -35,11 +35,9 @@
     "e2e": "npm-run-all clean:* compile test:compile test clean:* compile build"
   },
   "peerDependencies": {
-    "@react-native-community/async-storage": "1.x.x",
     "mobx-state-tree": "2.x || 3.x"
   },
   "devDependencies": {
-    "@react-native-community/async-storage": "^1.6.1",
     "@types/lodash.camelcase": "4.3.6",
     "ava": "2.4.0",
     "lodash.camelcase": "4.3.0",
@@ -62,5 +60,8 @@
     "files": [
       "build/**/*.test.js"
     ]
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.16.1"
   }
 }
